@@ -42,13 +42,13 @@ public class OrderItemCheapestInOperatorTranslator implements OperatorTranslator
         if (param instanceof List<?> list) {
             return list.stream()
                     .map(Object::toString)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         if (param instanceof String str) {
             return List.of(str.split(",")).stream()
                     .map(String::trim)
                     .filter(s -> !s.isEmpty())
-                    .collect(Collectors.toList());
+                    .toList();
         }
         throw new IllegalArgumentException("Parameter '" + paramName + "' must be a list for order.item.cheapest.in operator");
     }
