@@ -41,13 +41,13 @@ public class RedemptionUserEqualsOperatorTranslator implements OperatorTranslato
         if (param instanceof List<?> list) {
             return list.stream()
                     .map(Object::toString)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         if (param instanceof String str) {
             return List.of(str.split(",")).stream()
                     .map(String::trim)
                     .filter(s -> !s.isEmpty())
-                    .collect(Collectors.toList());
+                    .toList();
         }
         throw new IllegalArgumentException("Parameter '" + paramName + "' must be a list for redemption.user.equals operator");
     }
